fix double glyph drawing with svg. bug 330095. r=vlad